; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/lpfc/extr_lpfc_sli.c_lpfc_sli_chk_mbx_command.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/lpfc/extr_lpfc_sli.c_lpfc_sli_chk_mbx_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MBX_SHUTDOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @lpfc_sli_chk_mbx_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lpfc_sli_chk_mbx_command(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %7 [
    i32 171, label %5
    i32 164, label %5
    i32 130, label %5
    i32 129, label %5
    i32 146, label %5
    i32 177, label %5
    i32 182, label %5
    i32 186, label %5
    i32 184, label %5
    i32 149, label %5
    i32 168, label %5
    i32 163, label %5
    i32 159, label %5
    i32 157, label %5
    i32 161, label %5
    i32 155, label %5
    i32 162, label %5
    i32 165, label %5
    i32 153, label %5
    i32 134, label %5
    i32 188, label %5
    i32 179, label %5
    i32 180, label %5
    i32 144, label %5
    i32 148, label %5
    i32 131, label %5
    i32 181, label %5
    i32 183, label %5
    i32 143, label %5
    i32 140, label %5
    i32 139, label %5
    i32 136, label %5
    i32 174, label %5
    i32 187, label %5
    i32 189, label %5
    i32 173, label %5
    i32 145, label %5
    i32 185, label %5
    i32 158, label %5
    i32 160, label %5
    i32 152, label %5
    i32 156, label %5
    i32 128, label %5
    i32 141, label %5
    i32 172, label %5
    i32 191, label %5
    i32 150, label %5
    i32 132, label %5
    i32 178, label %5
    i32 170, label %5
    i32 169, label %5
    i32 138, label %5
    i32 137, label %5
    i32 154, label %5
    i32 135, label %5
    i32 151, label %5
    i32 133, label %5
    i32 175, label %5
    i32 176, label %5
    i32 147, label %5
    i32 166, label %5
    i32 167, label %5
    i32 142, label %5
    i32 190, label %5
    i32 192, label %5
  ]

5:                                                ; preds = %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1, %1
  %6 = load i32, i32* %2, align 4
  store i32 %6, i32* %3, align 4
  br label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @MBX_SHUTDOWN, align 4
  store i32 %8, i32* %3, align 4
  br label %9

9:                                                ; preds = %7, %5
  %10 = load i32, i32* %3, align 4
  ret i32 %10
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
